articles --> policies re-org

--- a/salvus/static/policies/index.html
+++ b/salvus/static/policies/index.html
@@ -28,7 +28,7 @@
                     <p>
                         These govern use of SageMathCloud.
                     </p>
-                    <p><a class="btn btn-default" href="terms/" role="button">View details &raquo;</a></p>
+                    <p><a class="btn btn-default" href="terms.html" role="button">View details &raquo;</a></p>
                 </div>
                 <div class="col-md-3">
                     <h2>Pricing</h2>
@@ -37,7 +37,7 @@
                         each of the SageMathCloud
                         products.
                     </p>
-                    <p><a class="btn btn-default" href="pricing/" role="button">View details &raquo;</a></p>
+                    <p><a class="btn btn-default" href="pricing.html" role="button">View details &raquo;</a></p>
                 </div>
                 <div class="col-md-3">
                     <h2>Copyright</h2>
@@ -47,7 +47,7 @@
                         and seeks to provide a site that does not
                         infringe on others copyright.
                     </p>
-                    <p><a class="btn btn-default" href="copyright/" role="button">View details &raquo;</a></p>
+                    <p><a class="btn btn-default" href="copyright.html" role="button">View details &raquo;</a></p>
                 </div>
                 <div class="col-md-3">
                     <h2>Privacy</h2>
@@ -56,7 +56,7 @@
                         seeks to respect the privacy of its
                         users.
                     </p>
-                    <p><a class="btn btn-default" href="privacy/" role="button">View details &raquo;</a></p>
+                    <p><a class="btn btn-default" href="privacy.html" role="button">View details &raquo;</a></p>
                 </div>
             </div>
 
