--- a/salvus/static/policies/terms.html
+++ b/salvus/static/policies/terms.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="SageMathCloud">
         <meta name="author" content="William Stein">
-        <title>SageMathCloud Articles</title>
+        <title>SageMathCloud Policies</title>
         <link href="/static/bootstrap-3.3.0/css/bootstrap.min.css" rel="stylesheet">
     </head>
     <body>
@@ -18,7 +18,7 @@
                 <h2>
                     Terms of Service (March 24, 2015)
                 </h2>
-                <a class="btn btn-default" href=".." role="button">&laquo; Other Policies</a>
+                <a class="btn btn-default" href="index.html" role="button">&laquo; Other Policies</a>
             </div>
         </div>
 
@@ -46,7 +46,7 @@
 
                     <p>We may modify the Terms at any time, in our sole
                         discretion. If we do so, we’ll let you know either by posting the modified Terms
-                        on the Site at <a href="https://cloud.sagemath.com/articles/terms">https://cloud.sagemath.com/articles/terms</a>
+                        on the Site at <a href="https://cloud.sagemath.com/policies/terms.html">https://cloud.sagemath.com/policies/terms.html</a>
                         or through other communications. It’s important that you review the Terms
                         whenever we modify them because if you continue to use the Services after we
                         have posted modified Terms on the Site, you are indicating to us that you agree
@@ -209,7 +209,7 @@
                         your selected payment method, for all applicable fees and taxes that may accrue
                         in relation to your use of the Services.&nbsp; </span>The fees for your
                         subscription to use the Services are set forth at <a
-                                                                             href="https://cloud.sagemath.com/articles/pricing">https://cloud.sagemath.com/articles/pricing</a>.&nbsp;
+                                                                             href="https://cloud.sagemath.com/policies/pricing.html">https://cloud.sagemath.com/policies/pricing.html</a>.&nbsp;
                         Pricing for the Services, including but not limited to monthly subscription
                         plan fees, are subject to change upon thirty (30) days’ notice from SMI.&nbsp;
                         Such notice may be provided at any time by posting the changes to the Site or
@@ -229,7 +229,7 @@
 
                     <h1 >Privacy Policy</h1>
 
-                    <p>Please refer to our Privacy Policy (<a href="https://cloud.sagemath.com/articles/privacy">https://cloud.sagemath.com/articles/privacy</a>)
+                    <p>Please refer to our Privacy Policy (<a href="https://cloud.sagemath.com/policies/privacy.html">https://cloud.sagemath.com/policies/privacy.html</a>)
                         for information on how we collect, use and disclose information from our users.
                     </p>
 
@@ -424,7 +424,7 @@
                         same. It is SMI’s policy to terminate in appropriate circumstances Account
                         holders who repeatedly infringe the rights of copyright holders. Please see
                         SMI’<i>s</i> Copyright and IP Policy at <a
-                                                                   href="https://cloud.sagemath.com/articles/copyright">https://cloud.sagemath.com/articles/copyright</a>
+                                                                   href="https://cloud.sagemath.com/policies/copyright.html">https://cloud.sagemath.com/policies/copyright.html</a>
                         for further information. </p>
 
                     <h1 >Links to Third Party
