--- a/salvus/static/policies/pricing.html
+++ b/salvus/static/policies/pricing.html
@@ -18,7 +18,7 @@
                 <h2>
                     Pricing Policy
                 </h2>
-                <a class="btn btn-default" href=".." role="button">&laquo; Other Policies</a>
+                <a class="btn btn-default" href="index.html" role="button">&laquo; Other Policies</a>
             </div>
         </div>
 
