make new terms of service live for new accounts and from help page and when creating a new account

--- a/salvus/static/policies/index.html
+++ b/salvus/static/policies/index.html
@@ -18,6 +18,9 @@
                 <h3>
                      Our terms of service, pricing, copyright and privacy policies
                 </h3>
+                <div class="lighten">
+                    If you have any questions, email <a href="mailto:office@sagemath.com" target="_blank">office@sagemath.com</a>.
+                </div>
             </div>
         </div>
 
