--- a/salvus/static/policies/terms.html
+++ b/salvus/static/policies/terms.html
@@ -24,7 +24,7 @@
 
         <div class="container">
             <div class="row">
-                <div class="col-md-8">
+                <div class="col-sm-offset-1 col-md-10">
 
                     <p>Welcome to the SageMath, Inc. (“<b>SMI</b>”) website
                         located at <a target="_blank" href="https://cloud.sagemath.com">https://cloud.sagemath.com</a> (the “<b>Site</b>”).
