terms.html stupid "." missing to specify the .uppercase class

--- a/salvus/static/policies/terms.html
+++ b/salvus/static/policies/terms.html
@@ -9,7 +9,7 @@
         <title>SageMathCloud Policies</title>
         <link href="/static/bootstrap-3.3.0/css/bootstrap.min.css" rel="stylesheet">
         <style>
-            .smc-terms uppercase {text-transform: uppercase;}
+            .smc-terms .uppercase {text-transform: uppercase;}
             .smc-terms ul > li {padding-bottom: 1em;}
         </style>
     </head>
