fix a typo in the terms that Andrey N. pointed out

--- a/salvus/static/policies/terms.html
+++ b/salvus/static/policies/terms.html
@@ -349,7 +349,7 @@
                     </p>
 
                     <p>
-                        Subject to your compliance with these Terms,margin SMI grants
+                        Subject to your compliance with these Terms, SMI grants
                         you, if you are an Account holder, a limited, non-exclusive, worldwide,
                         non-transferable license to copy, modify, create derivative works based upon,
                         and publicly display the Content (excluding any User Content) solely in
