update terms of usage to explicitly allow academic use; change some Sage to SageMath

--- a/salvus/static/policies/terms.html
+++ b/salvus/static/policies/terms.html
@@ -20,7 +20,7 @@
                 <h1>
                     <a href="http://www.sagemath.com" target="_blank">SageMath, Inc.</a></h1>
                 <h2>
-                    Terms of Service (March 24, 2015)
+                    Terms of Service (April 1, 2015)
                 </h2>
                 <a class="btn btn-default" href="index.html" role="button">&laquo; Other Policies</a>
             </div>
@@ -119,12 +119,12 @@
 
                     <p>
                         The Services offer a web-based environment through which
-                        users can use Sage and other open source math software online in connection
+                        users can use SageMath and other open source math software online in connection
                         with mathematical research and teaching and the performance of computational
                         mathematics.  Through their Accounts, users can create multiple projects
                         ("<b>Project</b>"), each of which acts as a file system with multiple
                         directories, inside of which a user can create and edit any number of files of
-                        any type (such as Latex documents, IPython notebooks, and Sage worksheets) as
+                        any type (such as Latex documents, IPython notebooks, and SageMath worksheets) as
                         well as write, compile, and run software code in various programming languages
                         (such files and code collectively, "<b>Files</b>").  You’ll be able to
                         share your Files with other users of the Services, as well as enable them to
@@ -233,8 +233,7 @@
                         cause the loss of access to Content, features, or capacity of your Account. SMI
                         does not accept any liability for such loss. We may suspend or terminate the
                         Services if fees are 30 days past due.
-                        You
-                        agree to pay, and authorize SMI’s third party payment processor to charge using
+                        You agree to pay, and authorize SMI’s third party payment processor to charge using
                         your selected payment method, for all applicable fees and taxes that may accrue
                         in relation to your use of the Services.
                         The fees for your
@@ -245,9 +244,16 @@
                         Pricing for the Services, including but not limited to monthly subscription
                         plan fees, are subject to change upon thirty (30) days’ notice from SMI.
                         Such notice may be provided at any time by posting the changes to the Site or
-                        the Service itself.  Unless you pay for a plan that explicitly allows
-                        otherwise, your use of the Services will be solely for your personal and
-                        non-commercial purposes.
+                        the Service itself.
+
+                        </p>
+
+                        <p>
+                        Unless you pay for a plan that explicitly allows
+                        otherwise, your use of the Services will be solely for your personal
+<b>academic or non-commercial purposes.</b>  If you would like to
+use the Services for commercial or non-academic purposes you must
+pay for a plan that explicitly allows this.
                         </p>
 
                     <h1>Feedback</h1>
