--- a/salvus/static/policies/terms.html
+++ b/salvus/static/policies/terms.html
@@ -77,14 +77,14 @@
                         commercially available product offering. The Services may not operate correctly
                         and may be substantially modified prior to first commercial release.
                         <span class="uppercase">All Services provided hereunder are in very
-                        preliminary stages of development and are likely to contain defects. a primary
-                        purpose of granting you access to our Services in this beta-testing phase is to
-                        obtain feedback on THE services’ performance and the identification of defects.
-                        we are under no obligation to correct or cure defects that have been
-                        identified. You are advised to safeguard important data, to use caution when
-                        using and not to rely in any way on the correct functioning or performance of
-                        the Services. you assume The entire risk arising out of the use of the
-                        Services.</span>
+                            preliminary stages of development and are likely to contain defects. a primary
+                            purpose of granting you access to our Services in this beta-testing phase is to
+                            obtain feedback on THE services’ performance and the identification of defects.
+                            we are under no obligation to correct or cure defects that have been
+                            identified. You are advised to safeguard important data, to use caution when
+                            using and not to rely in any way on the correct functioning or performance of
+                            the Services. you assume The entire risk arising out of the use of the
+                            Services.</span>
                     </p>
 
                     <h1>Who May Use the Services</h1>
@@ -185,28 +185,28 @@
 
                     <ul>
 
-                    <li>You expressly understand and agree that SMI shall not be liable
-                        for any direct, indirect, incidental, special, consequential or exemplary
-                        damages, including but not limited to, damages for loss of profits, goodwill,
-                        use, data or other intangible losses (even if SMI has been advised of the
-                        possibility of such damages), resulting from your use of the API or third-party
-                        products that access data via the API.
+                        <li>You expressly understand and agree that SMI shall not be liable
+                            for any direct, indirect, incidental, special, consequential or exemplary
+                            damages, including but not limited to, damages for loss of profits, goodwill,
+                            use, data or other intangible losses (even if SMI has been advised of the
+                            possibility of such damages), resulting from your use of the API or third-party
+                            products that access data via the API.
                         </li>
 
-                    <li>
-                        Abuse of or excessively frequent requests to the Services via the
-                        API may result in the temporary or permanent suspension of your access to the
-                        API. SMI, in its sole discretion, will determine abuse or excessive usage of
-                        the API. SMI will make a reasonable attempt via email to warn you prior to permanent
-                        suspension.
+                        <li>
+                            Abuse of or excessively frequent requests to the Services via the
+                            API may result in the temporary or permanent suspension of your access to the
+                            API. SMI, in its sole discretion, will determine abuse or excessive usage of
+                            the API. SMI will make a reasonable attempt via email to warn you prior to permanent
+                            suspension.
                         </li>
 
-                    <li>
-                        SMI reserves the right at any time to modify or discontinue, temporarily or
-                        permanently, your access to the API (or any part thereof) with or without
-                        notice.
-                     </li>
-                     </ul>
+                        <li>
+                            SMI reserves the right at any time to modify or discontinue, temporarily or
+                            permanently, your access to the API (or any part thereof) with or without
+                            notice.
+                        </li>
+                    </ul>
 
                     <h1>Payment, Refunds, Upgrading and Downgrading Accounts</h1>
 
@@ -238,23 +238,21 @@
                         in relation to your use of the Services.
                         The fees for your
                         subscription to use the Services are set forth at
-                <a href="https://cloud.sagemath.com/policies/pricing.html">
-                    https://cloud.sagemath.com/policies/pricing.html
-                </a>.
+                        <a href="https://cloud.sagemath.com/policies/pricing.html">
+                            https://cloud.sagemath.com/policies/pricing.html
+                        </a>.
                         Pricing for the Services, including but not limited to monthly subscription
                         plan fees, are subject to change upon thirty (30) days’ notice from SMI.
                         Such notice may be provided at any time by posting the changes to the Site or
                         the Service itself.
 
-                        </p>
+                    </p>
 
-                        <p>
+                    <p>
                         Unless you pay for a plan that explicitly allows
-                        otherwise, your use of the Services will be solely for your personal
-<b>academic or non-commercial purposes.</b>  If you would like to
-use the Services for commercial or non-academic purposes you must
-pay for a plan that explicitly allows this.
-                        </p>
+                        otherwise, your use of the Services will be solely for
+                        <b>academic or personal non-commercial purposes.</b> 
+                    </p>
 
                     <h1>Feedback</h1>
 
@@ -368,89 +366,89 @@ pay for a plan that explicitly allows this.
                     <p>You agree not to do any of the following:</p>
 
                     <ul>
-                    <li>
-                        Post, upload, publish, submit or transmit any Content that:
-                        (i) infringes, misappropriates or violates a third party’s patent,
-                        copyright, trademark, trade secret, moral rights or other intellectual property
-                        rights, or rights of publicity or privacy; (ii) violates, or encourages any
-                        conduct that would violate, any applicable law or regulation or would give rise
-                        to civil liability; (iii) is fraudulent, false, misleading or deceptive; (iv)
-                        is defamatory, obscene, pornographic, vulgar or offensive; (v) promotes
-                        discrimination, bigotry, racism, hatred, harassment or harm against any
-                        individual or group; (vi) is violent or threatening or promotes violence or
-                        actions that are threatening to any person or entity; or (vii) promotes
-                        illegal or harmful activities or substances.
-                    </li>
-
-                    <li>
-                        Use, display, mirror or frame the Services or any individual
-                        element within the Services, SMI’s name, any SMI trademark, logo or other
-                        proprietary information, or the layout and design of any page or form contained
-                        on a page, without SMI’s express written consent;
-                    </li>
-
-                    <li>
-                        Access, tamper with, or use non-public areas of the Services,
-                        SMI’s computer systems, or the technical delivery systems of SMI’s providers;
-                    </li>
-
-                    <li>
-                        Attempt to probe, scan or test the vulnerability of any SMI
-                        system or network or breach any security or authentication measures without
-                        SMI’s express written consent;
-                    </li>
-
-                    <li>
-                        Avoid, bypass, remove, deactivate, impair, descramble or
-                        otherwise circumvent any technological measure implemented by SMI or any of
-                        SMI’s providers or any other third party (including another user) to protect
-                        the Services or Content;
+                        <li>
+                            Post, upload, publish, submit or transmit any Content that:
+                            (i) infringes, misappropriates or violates a third party’s patent,
+                            copyright, trademark, trade secret, moral rights or other intellectual property
+                            rights, or rights of publicity or privacy; (ii) violates, or encourages any
+                            conduct that would violate, any applicable law or regulation or would give rise
+                            to civil liability; (iii) is fraudulent, false, misleading or deceptive; (iv)
+                            is defamatory, obscene, pornographic, vulgar or offensive; (v) promotes
+                            discrimination, bigotry, racism, hatred, harassment or harm against any
+                            individual or group; (vi) is violent or threatening or promotes violence or
+                            actions that are threatening to any person or entity; or (vii) promotes
+                            illegal or harmful activities or substances.
                         </li>
 
-                    <li>
-                        Attempt to access or search the Services or Content or download
-                        Content from the Services through the use of any engine, software, tool, agent,
-                        device or mechanism (including spiders, robots, crawlers, data mining tools or
-                        the like) other than the software and/or search agents provided by SMI or other
-                        generally available third-party web browsers;
+                        <li>
+                            Use, display, mirror or frame the Services or any individual
+                            element within the Services, SMI’s name, any SMI trademark, logo or other
+                            proprietary information, or the layout and design of any page or form contained
+                            on a page, without SMI’s express written consent;
                         </li>
 
-                    <li>
-
-                        Send any unsolicited or unauthorized advertising, promotional
-                        materials, email, junk mail, spam, chain letters or other form of solicitation;
+                        <li>
+                            Access, tamper with, or use non-public areas of the Services,
+                            SMI’s computer systems, or the technical delivery systems of SMI’s providers;
                         </li>
 
-                    <li>
-                        Use any meta tags or other hidden text or metadata utilizing a
-                        SMI trademark, logo URL or product name without SMI’s express written consent;
-                    </li>
-
-                    <li>
-                        Use the Services or Content, or any portion thereof, in any
-                        manner not permitted by these Terms; </li>
-
-                    <li>
-                        Forge any TCP/IP packet header or any part of the header
-                        information in any email or newsgroup posting, or in any way use the Services
-                        or Content to send altered, deceptive or false source-identifying information;
+                        <li>
+                            Attempt to probe, scan or test the vulnerability of any SMI
+                            system or network or breach any security or authentication measures without
+                            SMI’s express written consent;
                         </li>
 
-                    <li>
-                        Interfere with, or attempt to interfere with, the access of any
-                        user, host or network, including, without limitation, sending a virus,
-                        overloading, flooding, spamming, or mail-bombing the Services;</li>
+                        <li>
+                            Avoid, bypass, remove, deactivate, impair, descramble or
+                            otherwise circumvent any technological measure implemented by SMI or any of
+                            SMI’s providers or any other third party (including another user) to protect
+                            the Services or Content;
+                        </li>
 
-                    <li>
-                        Impersonate or misrepresent your affiliation with any person or
-                        entity;</li>
+                        <li>
+                            Attempt to access or search the Services or Content or download
+                            Content from the Services through the use of any engine, software, tool, agent,
+                            device or mechanism (including spiders, robots, crawlers, data mining tools or
+                            the like) other than the software and/or search agents provided by SMI or other
+                            generally available third-party web browsers;
+                        </li>
 
-                    <li>Violate any applicable law or regulation; or</li>
+                        <li>
 
-                    <li> Encourage or enable any other individual to do any of the
-                        foregoing.
-                    </li>
-            </ul>
+                            Send any unsolicited or unauthorized advertising, promotional
+                            materials, email, junk mail, spam, chain letters or other form of solicitation;
+                        </li>
+
+                        <li>
+                            Use any meta tags or other hidden text or metadata utilizing a
+                            SMI trademark, logo URL or product name without SMI’s express written consent;
+                        </li>
+
+                        <li>
+                            Use the Services or Content, or any portion thereof, in any
+                            manner not permitted by these Terms; </li>
+
+                        <li>
+                            Forge any TCP/IP packet header or any part of the header
+                            information in any email or newsgroup posting, or in any way use the Services
+                            or Content to send altered, deceptive or false source-identifying information;
+                        </li>
+
+                        <li>
+                            Interfere with, or attempt to interfere with, the access of any
+                            user, host or network, including, without limitation, sending a virus,
+                            overloading, flooding, spamming, or mail-bombing the Services;</li>
+
+                        <li>
+                            Impersonate or misrepresent your affiliation with any person or
+                            entity;</li>
+
+                        <li>Violate any applicable law or regulation; or</li>
+
+                        <li> Encourage or enable any other individual to do any of the
+                            foregoing.
+                        </li>
+                    </ul>
 
                     <p>
                         Although we’re not obligated to monitor
@@ -577,7 +575,7 @@ pay for a plan that explicitly allows this.
                         ITS ESSENTIAL PURPOSE.<span> SOME JURISDICTIONS DO NOT ALLOW THE EXCLUSION OR
                         LIMITATION OF LIABILITY FOR CONSEQUENTIAL OR INCIDENTAL DAMAGES, SO THE ABOVE
                         LIMITATION MAY NOT APPLY TO YOU.
-                    </p>
+                        </p>
 
                     <p class='uppercase'>In no event will SMI’S total liability arising out of or in
                         connection with THESE TERMS OR FROM THE USE OF OR INABILITY TO USE
@@ -620,8 +618,8 @@ pay for a plan that explicitly allows this.
                         each of the parties hereto waives any objection to jurisdiction and venue in
                         such courts.
                         <b>You acknowledge and agree that you and SMI are each
-                        waiving the right to a trial by jury or to participate as a plaintiff or class
-                        member in any purported class action or representative proceeding.</b>
+                            waiving the right to a trial by jury or to participate as a plaintiff or class
+                            member in any purported class action or representative proceeding.</b>
                         Further,
                         unless both you and SMI otherwise agree in writing, the arbitrator may not
                         consolidate more than one person's claims, and may not otherwise preside over
@@ -786,7 +784,7 @@ pay for a plan that explicitly allows this.
                         If you have any questions about these Terms or the
                         Services, please contact SMI at
                         <a href="mailto:office@sagemath.com">office@sagemath.com</a>.
-                   </p>
+                    </p>
                 </div>
             </div>
 
