--- a/salvus/static/policies/terms.html
+++ b/salvus/static/policies/terms.html
@@ -14,7 +14,8 @@
         </style>
     </head>
     <body>
-        <img class="pull-right" src="/static/favicon-96.png">
+        <a target="_blank" class="pull-right" style="text-align:center" href="https://cloud.sagemath.com"><img  src="/static/favicon-96.png"><br>
+        SageMathCloud</a>
         <div class="jumbotron">
             <div class="container">
                 <h1>
@@ -251,7 +252,7 @@
                     <p>
                         Unless you pay for a plan that explicitly allows
                         otherwise, your use of the Services will be solely for
-                        <b>academic or personal non-commercial purposes.</b> 
+                        <b>academic or personal non-commercial purposes.</b>
                     </p>
 
                     <h1>Feedback</h1>
