--- a/salvus/static/policies/index.html
+++ b/salvus/static/policies/index.html
@@ -10,7 +10,8 @@
         <link href="/static/bootstrap-3.3.0/css/bootstrap.min.css" rel="stylesheet">
     </head>
     <body>
-        <img class="pull-right" src="/static/favicon-96.png">
+        <a target="_blank" class="pull-right" style="text-align:center" href="https://cloud.sagemath.com"><img  src="/static/favicon-96.png"><br>
+        SageMathCloud</a>
         <div class="jumbotron">
             <div class="container">
                 <h1>
