rough sketch of pricing ideas...

--- a/salvus/static/policies/pricing.html
+++ b/salvus/static/policies/pricing.html
@@ -11,13 +11,13 @@
     </head>
     <body>
         <a target="_blank" class="pull-right" style="text-align:center" href="https://cloud.sagemath.com"><img  src="/static/favicon-96.png"><br>
-        SageMathCloud</a>
+            SageMathCloud</a>
         <div class="jumbotron">
             <div class="container">
                 <h1>
                     <a href="http://www.sagemath.com" target="_blank">SageMath, Inc.</a></h1>
                 <h2>
-                    Pricing Policy
+                    SageMath, Inc. Pricing (April 2, 2015)
                 </h2>
                 <a class="btn btn-default" href="index.html" role="button">&laquo; Other Policies</a>
             </div>
@@ -25,8 +25,144 @@
 
         <div class="container">
             <div class="row">
-                <div class="col-md-8">
-                    Not yet written
+                <div class="col-md-10 col-sm-offset-1">
+
+                    <p>
+                        SageMathCloud charges for usage on a monthly basis, using the following pricing.  Listed prices are in US dollars.
+                    </p>
+
+                    <p>
+                        When charging in local currency, SageMath, Inc.
+                        will convert the prices listed into
+                        local currency using the conversion rates
+                        published by leading financial institutions.
+                    </p>
+
+                    <h1>
+                        Project types
+                    </h1>
+
+                    <strong>Warning:</strong> <font color=#a80000>The following prices are <em><strong>very preliminary</strong></em> and <em><strong>no product</strong></em> is currently available for purchase, as of April 2, 2015.</font>
+                    <br><br>
+
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h3 class="panel-title">Pricing for each project type</h3>
+                        </div>
+
+                        <div class="panel-body">
+
+                            <table class="table table-bordered table-hover">
+                                <tr>
+                                    <th style="width:10em">Project type</th>
+                                    <th>Commercial use<sup>1</sup></th>
+                                    <th>Network access<sup>2</sup></th>
+                                    <th>Idle timeout<sup>3</sup></th>
+                                    <th>Disk space<sup>4</sup></th>
+                                    <th>Speed<sup>5</sup></th>
+                                    <th>Memory<sup>6</sup></th>
+                                    <th>Price per month<sup>7</sup></th>
+                                </tr>
+                                <tr class="warning">
+                                    <td>free-1</td>
+                                    <td>No</td>
+                                    <td>No</td>
+                                    <td>1 hour</td>
+                                    <td>2GB</td>
+                                    <td>1 shared Opteron</td>
+                                    <td>2GB shared</td>
+                                    <td>$0/month</td>
+                                </tr>
+                                <tr class="success">
+                                    <td>shared-1</td>
+                                    <td>Yes</td>
+                                    <td>Yes</td>
+                                    <td>24 hours</td>
+                                    <td>5GB</td>
+                                    <td>1 shared Intel</td>
+                                    <td>2GB shared</td>
+                                    <td>$7.50/month</td>
+                                </tr>
+                                <tr class="success">
+                                    <td>shared-2</td>
+                                    <td>Yes</td>
+                                    <td>Yes</td>
+                                    <td>1 week</td>
+                                    <td>10GB</td>
+                                    <td>2 shared Intel</td>
+                                    <td>4GB shared</td>
+                                    <td>$15/month</td>
+                                </tr>
+                                <tr class="success">
+                                    <td>shared-4</td>
+                                    <td>Yes</td>
+                                    <td>Yes</td>
+                                    <td>infinite</td>
+                                    <td>50GB</td>
+                                    <td>2 shared Intel </td>
+                                    <td>7.5GB shared</td>
+                                    <td>$30/month</td>
+                                </tr>
+                               <tr class="info">
+                                    <td>dedicated-1</td>
+                                    <td>Yes</td>
+                                    <td>Yes</td>
+                                    <td>infinite</td>
+                                    <td>50GB</td>
+                                    <td>2 dedicated Intel</td>
+                                    <td>7.5GB dedicated</td>
+                                    <td>$150/month</td>
+                                </tr>
+                            </table>
+
+
+                            <ol>
+                                <li><strong>Commercial use:</strong> free-1 projects may only be used for academic and non-commercial use.</li>
+
+                                <li><strong>Network access:</strong>
+                                    Access from your project to the outside Internet, so you can pull files from external data sources easily.
+                                </li>
+                                <li><b>Idle timeout:</b>
+                                    Your project will stop running if no files are edited for this amount of time.
+                                </li>
+                                <li><b>Disk space:</b>
+                                    The total mount of disk space that your project may use.  This does not count snapshots and other backups.
+                                </li>
+                                <li><b>Speed:</b>
+                                    The Opteron processors are significantly slower than the Xeon's (often a factor of 2).  Shared processors may be shared
+with other users, so you are not guaranteed to always get the full speed.
+
+
+                                </li>
+                                <li><b>Memory:</b>
+                                    The total amount of memory (RAM) that your project may use.  Shared memory is shared
+with other users, so you are not guaranteed to always get the full amount
+                                    of memory.
+                                </li>
+                                <li><b>Price per month:</b>
+                                    Prices are not prorated.  If you sign up you will be charged for a complete month.
+                                </li>
+                            </ol>
+                        </div>
+
+                        <div class="panel-footer">
+                            <b>Further Notes:</b>
+
+                            <ul>
+                                <li>
+                                    All free-1 projects run on a single crowded
+                                    pool of computers, whereas the share projects run on
+                                    their own completely separate pool of much
+                                    less crowded computers.
+                                </li>
+
+                            </ul>
+
+
+                        </div>
+                    </div>
+
+
                 </div>
             </div>
 
