hide pricing policy

--- a/salvus/static/policies/pricing.html
+++ b/salvus/static/policies/pricing.html
@@ -6,12 +6,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="SageMathCloud">
         <meta name="author" content="William Stein">
-        <title>SageMathCloud Articles</title>
+        <title>SageMath, Inc. Pricing</title>
         <link href="/static/bootstrap-3.3.0/css/bootstrap.min.css" rel="stylesheet">
     </head>
     <body>
         <a target="_blank" class="pull-right" style="text-align:center" href="https://cloud.sagemath.com"><img  src="/static/favicon-96.png"><br>
-            SageMathCloud</a>
+                SageMathCloud</a>
         <div class="jumbotron">
             <div class="container">
                 <h1>
@@ -24,10 +24,8 @@
         </div>
 
         <div class="container">
-            <div class="row">
-                <div class="col-md-10 col-sm-offset-1">
-
-                    <p>
+            <div class="row hide">
+                <div class="col-md-10 col-sm-offset-1"><p>
                         SageMathCloud charges for usage on a monthly basis, using the following pricing.  Listed prices are in US dollars.
                     </p>
 
@@ -69,8 +67,8 @@
                                     <td>No</td>
                                     <td>1 hour</td>
                                     <td>2GB</td>
-                                    <td>1 shared Opteron</td>
-                                    <td>2GB shared</td>
+                                    <td>1 shared Opteron CPU</td>
+                                    <td>2GB RAM shared</td>
                                     <td>$0/month</td>
                                 </tr>
                                 <tr class="success">
@@ -79,8 +77,8 @@
                                     <td>Yes</td>
                                     <td>24 hours</td>
                                     <td>5GB</td>
-                                    <td>1 shared Intel</td>
-                                    <td>2GB shared</td>
+                                    <td>1 shared Intel CPU</td>
+                                    <td>2GB RAM shared</td>
                                     <td>$7.50/month</td>
                                 </tr>
                                 <tr class="success">
@@ -89,8 +87,8 @@
                                     <td>Yes</td>
                                     <td>1 week</td>
                                     <td>10GB</td>
-                                    <td>2 shared Intel</td>
-                                    <td>4GB shared</td>
+                                    <td>2 shared Intel CPU</td>
+                                    <td>3.75GB RAM shared</td>
                                     <td>$15/month</td>
                                 </tr>
                                 <tr class="success">
@@ -99,8 +97,8 @@
                                     <td>Yes</td>
                                     <td>infinite</td>
                                     <td>50GB</td>
-                                    <td>2 shared Intel </td>
-                                    <td>7.5GB shared</td>
+                                    <td>4 shared Intel CPU </td>
+                                    <td>7.5GB RAM shared</td>
                                     <td>$30/month</td>
                                 </tr>
                                <tr class="info">
@@ -109,9 +107,9 @@
                                     <td>Yes</td>
                                     <td>infinite</td>
                                     <td>50GB</td>
-                                    <td>2 dedicated Intel</td>
-                                    <td>7.5GB dedicated</td>
-                                    <td>$150/month</td>
+                                    <td>1 dedicated Intel CPU</td>
+                                    <td>3.75GB dedicated</td>
+                                    <td>$60/month</td>
                                 </tr>
                             </table>
 
