--- a/salvus/static/policies/pricing.html
+++ b/salvus/static/policies/pricing.html
@@ -11,22 +11,22 @@
     </head>
     <body>
         <a target="_blank" class="pull-right" style="text-align:center" href="https://cloud.sagemath.com"><img  src="/static/favicon-96.png"><br>
-                SageMathCloud</a>
+            SageMathCloud</a>
         <div class="jumbotron">
             <div class="container">
                 <h1>
                     <a href="http://www.sagemath.com" target="_blank">SageMath, Inc.</a></h1>
                 <h2>
-                    SageMath, Inc. Pricing (April 2, 2015)
+                    SageMath, Inc. Pricing (April 3, 2015)
                 </h2>
                 <a class="btn btn-default" href="index.html" role="button">&laquo; Other Policies</a>
             </div>
         </div>
 
         <div class="container">
-            <div class="row hide">
-                <div class="col-md-10 col-sm-offset-1"><p>
-                        SageMathCloud charges for usage on a monthly basis, using the following pricing.  Listed prices are in US dollars.
+            <div class="row">
+                <div class="col-md-10 col-sm-offset-0"><p>
+                    SageMathCloud charges for usage on a monthly basis, using the following pricing.  Listed prices are in US dollars.
                     </p>
 
                     <p>
@@ -40,7 +40,28 @@
                         Project types
                     </h1>
 
-                    <strong>Warning:</strong> <font color=#a80000>The following prices are <em><strong>very preliminary</strong></em> and <em><strong>no product</strong></em> is currently available for purchase, as of April 2, 2015.</font>
+                    <strong>Warning:</strong> <font color=#a80000>The following prices are <em><strong>very preliminary</strong></em> and <em><strong>no product</strong></em> is currently available for purchase.</font>
+                    <br>
+                    <br>
+                    <div class="row">
+                        <div class="col-md-5">
+                            SMC grows with you! The following upgrades allow you to increase the
+                            <em><strong>storage space</strong></em> for your files, the <em><strong>computational power and memory</strong></em> for
+                            your calculations, give your project
+                            <em><strong>network access</strong></em>,
+                            and let <strong><em>remove restrictions</em></strong> on non-commercial/non-academic use.
+                        </div>
+                        <div class="col-md-5 col-sm-offset-2">
+                            By upgrading one of your projects to a paid monthly plan, your files
+                            are copied to faster computers that are reserved only for pay projects,
+                            and you can start working right away.  If you
+                            cancel your plan<sup>8</sup>, your files move back to slower free-1 machines.
+                            In any case, you do not lose your data and
+                            we regularly snapshot and backup your files across multiple data
+                            centers.
+                        </div>
+                    </div>
+
                     <br><br>
 
                     <div class="panel panel-default">
@@ -57,9 +78,15 @@
                                     <th>Network access<sup>2</sup></th>
                                     <th>Idle timeout<sup>3</sup></th>
                                     <th>Disk space<sup>4</sup></th>
-                                    <th>Speed<sup>5</sup></th>
+                                    <th>Shared CPU's<sup>5</sup></th>
                                     <th>Memory<sup>6</sup></th>
-                                    <th>Price per month<sup>7</sup></th>
+                                    <th>Backup interval<sup>7</sup></th>
+                                    <th>Price per month<sup>8</sup></th>
+                                </tr>
+                                <tr class="warning">
+                                    <td colspan=9>
+                                        This <strong>free-1 plan</strong> is the default. You can evaluate the service and use it for
+academic and non-commercial purposes only.</td>
                                 </tr>
                                 <tr class="warning">
                                     <td>free-1</td>
@@ -67,41 +94,65 @@
                                     <td>No</td>
                                     <td>1 hour</td>
                                     <td>2GB</td>
-                                    <td>1 shared Opteron CPU</td>
+                                    <td>1 Opteron</td>
                                     <td>2GB RAM shared</td>
-                                    <td>$0/month</td>
+                                    <td>15 minutes</td>
+                                    <td>$0</td>
+                                </tr>
+                                <tr class="success">
+                                    <td colspan=9>
+                                        The <strong>shared</strong>
+                                        plans allow you to run more
+                                        intensive computations on less
+                                        crowded machines, or just want to
+                                        support development of SMC.
+                                    </td>
                                 </tr>
                                 <tr class="success">
                                     <td>shared-1</td>
                                     <td>Yes</td>
                                     <td>Yes</td>
-                                    <td>24 hours</td>
+                                    <td>1 day</td>
                                     <td>5GB</td>
-                                    <td>1 shared Intel CPU</td>
+                                    <td>1 Intel</td>
                                     <td>2GB RAM shared</td>
-                                    <td>$7.50/month</td>
+                                    <td>10 minutes</td>
+                                    <td>$15</td>
                                 </tr>
                                 <tr class="success">
                                     <td>shared-2</td>
                                     <td>Yes</td>
                                     <td>Yes</td>
-                                    <td>1 week</td>
+                                    <td>2 days</td>
                                     <td>10GB</td>
-                                    <td>2 shared Intel CPU</td>
-                                    <td>3.75GB RAM shared</td>
-                                    <td>$15/month</td>
+                                    <td>2 Intel</td>
+                                    <td>4GB RAM shared</td>
+                                    <td>7 minutes</td>
+                                    <td>$20</td>
                                 </tr>
                                 <tr class="success">
+                                    <td>shared-3</td>
+                                    <td>Yes</td>
+                                    <td>Yes</td>
+                                    <td>1 week</td>
+                                    <td>20GB</td>
+                                    <td>3 Intel</td>
+                                    <td>6GB RAM shared</td>
+                                    <td>5 minutes</td>
+                                    <td>$35</td>
+                                </tr>
+                                <tr class="success hide">
                                     <td>shared-4</td>
                                     <td>Yes</td>
                                     <td>Yes</td>
-                                    <td>infinite</td>
+                                    <td>1 month</td>
                                     <td>50GB</td>
-                                    <td>4 shared Intel CPU </td>
-                                    <td>7.5GB RAM shared</td>
-                                    <td>$30/month</td>
+                                    <td>4 Intel</td>
+                                    <td>8GB RAM shared</td>
+                                    <td>5 minutes</td>
+                                    <td>$55</td>
                                 </tr>
-                               <tr class="info">
+                                <tr class="info hide">
                                     <td>dedicated-1</td>
                                     <td>Yes</td>
                                     <td>Yes</td>
@@ -109,7 +160,8 @@
                                     <td>50GB</td>
                                     <td>1 dedicated Intel CPU</td>
                                     <td>3.75GB dedicated</td>
-                                    <td>$60/month</td>
+                                    <td>5 minutes</td>
+                                    <td>$60</td>
                                 </tr>
                             </table>
 
@@ -122,20 +174,25 @@
                                 </li>
                                 <li><b>Idle timeout:</b>
                                     Your project will stop running if no files are edited for this amount of time.
+                                    The project could also stop if the underlying machine crashes due to excessive use,
+                                    or the machine is rebooted for maintenance.
                                 </li>
                                 <li><b>Disk space:</b>
                                     The total mount of disk space that your project may use.  This does not count snapshots and other backups.
                                 </li>
                                 <li><b>Speed:</b>
                                     The Opteron processors are significantly slower than the Xeon's (often a factor of 2).  Shared processors may be shared
-with other users, so you are not guaranteed to always get the full speed.
+                                    with other users, so you are not guaranteed to always get the full speed.
 
 
                                 </li>
                                 <li><b>Memory:</b>
                                     The total amount of memory (RAM) that your project may use.  Shared memory is shared
-with other users, so you are not guaranteed to always get the full amount
+                                    with other users, so you are not guaranteed to always get the full amount
                                     of memory.
+                                </li>
+                                <li><b>Backups:</b>
+                                    Browsable snapshots of all files in your project are saved periodically.
                                 </li>
                                 <li><b>Price per month:</b>
                                     Prices are not prorated.  If you sign up you will be charged for a complete month.
@@ -143,7 +200,7 @@ with other users, so you are not guaranteed to always get the full amount
                             </ol>
                         </div>
 
-                        <div class="panel-footer">
+                        <div class="panel-footer hide">
                             <b>Further Notes:</b>
 
                             <ul>
