--- a/salvus/static/policies/pricing.html
+++ b/salvus/static/policies/pricing.html
@@ -37,7 +37,7 @@
                     </p>
 
                     <h1>
-                        Project types
+                        Plan types
                     </h1>
 
 
@@ -67,14 +67,15 @@
 
                     <div class="panel panel-default">
                         <div class="panel-heading">
-                            <h3 class="panel-title">Pricing for each project type</h3>
+                            <h3 class="panel-title">Pricing for each plan</h3>
                         </div>
 
                         <div class="panel-body">
 
                             <table class="table table-bordered table-hover">
                                 <tr>
-                                    <th style="width:10em">Project type</th>
+                                    <th style="width:10em">Plan type</th>
+                                    <th>Number of projects</th>
                                     <th>Commercial use<sup>1</sup></th>
                                     <th>Network access<sup>2</sup></th>
                                     <th>Idle timeout<sup>3</sup></th>
@@ -85,12 +86,13 @@
                                     <th>Price per month<sup>8</sup></th>
                                 </tr>
                                 <tr class="warning">
-                                    <td colspan=9>
+                                    <td colspan=10>
                                         This <strong>free-1 plan</strong> is the default. You can evaluate the service and use it for
 academic and non-commercial purposes only.</td>
                                 </tr>
                                 <tr class="warning">
                                     <td>free-1</td>
+                                    <td>Unlimited</td>
                                     <td>No</td>
                                     <td>No</td>
                                     <td>1 hour</td>
@@ -101,16 +103,17 @@ academic and non-commercial purposes only.</td>
                                     <td>$0</td>
                                 </tr>
                                 <tr class="success">
-                                    <td colspan=9>
+                                    <td colspan=10>
                                         The <strong>shared</strong>
-                                        plans allow you to run more
-                                        intensive computations on less
-                                        crowded machines, or just want to
-                                        support development of SMC.
+                                        plans allow you to move
+                                        some of your projects
+                                        to  less
+                                        crowded faster machines.
                                     </td>
                                 </tr>
                                 <tr class="success">
                                     <td>shared-1</td>
+                                    <td>1</td>
                                     <td>Yes</td>
                                     <td>Yes</td>
                                     <td>1 day</td>
@@ -122,6 +125,7 @@ academic and non-commercial purposes only.</td>
                                 </tr>
                                 <tr class="success">
                                     <td>shared-2</td>
+                                    <td>2</td>
                                     <td>Yes</td>
                                     <td>Yes</td>
                                     <td>2 days</td>
@@ -133,6 +137,7 @@ academic and non-commercial purposes only.</td>
                                 </tr>
                                 <tr class="success">
                                     <td>shared-3</td>
+                                    <td>3</td>
                                     <td>Yes</td>
                                     <td>Yes</td>
                                     <td>1 week</td>
@@ -153,16 +158,50 @@ academic and non-commercial purposes only.</td>
                                     <td>5 minutes</td>
                                     <td>$55</td>
                                 </tr>
-                                <tr class="info hide">
+                                <tr class="info">
+                                    <td colspan=10>
+                                        The <strong>dedicated</strong>
+                                        plans allow you to run  any
+                                        number of your projects
+                                        on a machine dedicated only
+                                        to them.
+                                    </td>
+                                </tr>
+                                <tr class="info">
                                     <td>dedicated-1</td>
+                                    <td>Unlimited</td>
+                                    <td>Yes</td>
+                                    <td>Yes</td>
+                                    <td>infinite</td>
+                                    <td>20GB</td>
+                                    <td>1 dedicated Intel CPU</td>
+                                    <td>3.75GB dedicated</td>
+                                    <td>5 minutes</td>
+                                    <td>$64</td>
+                                </tr>
+                                <tr class="info">
+                                    <td>dedicated-2</td>
+                                    <td>Unlimited</td>
                                     <td>Yes</td>
                                     <td>Yes</td>
                                     <td>infinite</td>
                                     <td>50GB</td>
-                                    <td>1 dedicated Intel CPU</td>
-                                    <td>3.75GB dedicated</td>
+                                    <td>2 dedicated Intel CPU</td>
+                                    <td>13GB dedicated</td>
                                     <td>5 minutes</td>
-                                    <td>$60</td>
+                                    <td>$150</td>
+                                </tr>
+                                <tr class="info">
+                                    <td>dedicated-3</td>
+                                    <td>Unlimited</td>
+                                    <td>Yes</td>
+                                    <td>Yes</td>
+                                    <td>infinite</td>
+                                    <td>200GB</td>
+                                    <td>4 dedicated Intel CPU</td>
+                                    <td>26GB dedicated</td>
+                                    <td>5 minutes</td>
+                                    <td>$300</td>
                                 </tr>
                             </table>
 
