update some basic information

--- a/salvus/static/policies/pricing.html
+++ b/salvus/static/policies/pricing.html
@@ -75,7 +75,6 @@
                             <table class="table table-bordered table-hover">
                                 <tr>
                                     <th style="width:10em">Plan type</th>
-                                    <th>Number of projects</th>
                                     <th>Commercial use<sup>1</sup></th>
                                     <th>Network access<sup>2</sup></th>
                                     <th>Idle timeout<sup>3</sup></th>
@@ -86,13 +85,12 @@
                                     <th>Price per month<sup>8</sup></th>
                                 </tr>
                                 <tr class="warning">
-                                    <td colspan=10>
+                                    <td colspan=9>
                                         This <strong>free-1 plan</strong> is the default. You can evaluate the service and use it for
 academic and non-commercial purposes only.</td>
                                 </tr>
                                 <tr class="warning">
                                     <td>free-1</td>
-                                    <td>Unlimited</td>
                                     <td>No</td>
                                     <td>No</td>
                                     <td>1 hour</td>
@@ -103,7 +101,7 @@ academic and non-commercial purposes only.</td>
                                     <td>$0</td>
                                 </tr>
                                 <tr class="success">
-                                    <td colspan=10>
+                                    <td colspan=9>
                                         The <strong>shared</strong>
                                         plans allow you to move
                                         some of your projects
@@ -113,7 +111,6 @@ academic and non-commercial purposes only.</td>
                                 </tr>
                                 <tr class="success">
                                     <td>shared-1</td>
-                                    <td>1</td>
                                     <td>Yes</td>
                                     <td>Yes</td>
                                     <td>1 day</td>
@@ -123,9 +120,8 @@ academic and non-commercial purposes only.</td>
                                     <td>10 minutes</td>
                                     <td>$15</td>
                                 </tr>
-                                <tr class="success">
+                                <tr class="success hide">
                                     <td>shared-2</td>
-                                    <td>2</td>
                                     <td>Yes</td>
                                     <td>Yes</td>
                                     <td>2 days</td>
@@ -135,9 +131,8 @@ academic and non-commercial purposes only.</td>
                                     <td>7 minutes</td>
                                     <td>$20</td>
                                 </tr>
-                                <tr class="success">
+                                <tr class="success hide ">
                                     <td>shared-3</td>
-                                    <td>3</td>
                                     <td>Yes</td>
                                     <td>Yes</td>
                                     <td>1 week</td>
@@ -158,8 +153,8 @@ academic and non-commercial purposes only.</td>
                                     <td>5 minutes</td>
                                     <td>$55</td>
                                 </tr>
-                                <tr class="info">
-                                    <td colspan=10>
+                                <tr class="info hide">
+                                    <td colspan=9>
                                         The <strong>dedicated</strong>
                                         plans allow you to run  any
                                         number of your projects
@@ -167,9 +162,8 @@ academic and non-commercial purposes only.</td>
                                         to them.
                                     </td>
                                 </tr>
-                                <tr class="info">
+                                <tr class="info hide">
                                     <td>dedicated-1</td>
-                                    <td>Unlimited</td>
                                     <td>Yes</td>
                                     <td>Yes</td>
                                     <td>infinite</td>
@@ -179,9 +173,8 @@ academic and non-commercial purposes only.</td>
                                     <td>5 minutes</td>
                                     <td>$64</td>
                                 </tr>
-                                <tr class="info">
+                                <tr class="info hide">
                                     <td>dedicated-2</td>
-                                    <td>Unlimited</td>
                                     <td>Yes</td>
                                     <td>Yes</td>
                                     <td>infinite</td>
@@ -191,9 +184,8 @@ academic and non-commercial purposes only.</td>
                                     <td>5 minutes</td>
                                     <td>$150</td>
                                 </tr>
-                                <tr class="info">
+                                <tr class="info hide">
                                     <td>dedicated-3</td>
-                                    <td>Unlimited</td>
                                     <td>Yes</td>
                                     <td>Yes</td>
                                     <td>infinite</td>
