update privacy policy about warning about UW's only policies

--- a/salvus/static/policies/privacy.html
+++ b/salvus/static/policies/privacy.html
@@ -33,6 +33,14 @@
                     </p>
 
 
+                    <h1>
+                        <font color=#f21010>IMPORTANT WARNING</font>
+                    </h1>
+                    As of April 2015, the free compute parts of SageMathCloud are hosted at University of Washington, to which <a href="http://www.washington.edu/admin/rules/policies/APS/47.02.html">Administrative Policy Statement 47.2</a> applies. In particular, see section 2 <b>No Expectation of Privacy</b>, which says <em>"there should be no expectation of privacy with regard to the use of University communication technologies (e.g., email, facsimile transmissions, voicemail, and websites visited). For example, communications resulting from University computers and equipment may be subject to disclosure under the Public Records Act, in litigation involving the University, or for audit purposes."</em>
+<br>
+                    <p>
+                    We are working on moving SMC completely out of the University, at which point this notice will be updated.</p>
+
                     <h1>Revisions to this Privacy Policy
                     </h1>
 
